Implement setting/get (#54)
